[project]
name = "fhir-tbs"
description = "Topic-Based Subscription context for python aiohttp web applications"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["fhir", "tbs"]
dynamic = ["version"]
authors = [
  { name = "beda.software", email = "fhir-tbs-py@beda.software" },
]
dependencies = [
  "fhirpy>=2.0.12",
  "aiohttp>=3.10.5",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"

[project.optional-dependencies]
r4b = ["fhirpy-types-r4b"]
r5 = ["fhirpy-types-r5"]

[project.urls]
homepage = "https://github.com/beda-software/fhir-tbs-py"
documentation = "https://github.com/beda-software/fhir-tbs-py#readme"
repository = "https://github.com/beda-software/fhir-tbs-py.git"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fhirpy = ">=2.0.12"
aiohttp = ">=3.10.5"
fhirpy-types-r4b = "^0.1.1"
fhirpy-types-r5 = "^0.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
mypy = "^1.11.1"
black = "^24.4.2"
autohooks-plugin-mypy = "^23.10.0"
autohooks-plugin-ruff = "^24.1.0"
autohooks-plugin-black = "^23.10.0"
autohooks = "^24.2.0"
pytest = "^8.3.2"
pytest-aiohttp = "^1.0.5"
pytest-cov = "^5.0.0"

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["emded"]

[tool.ruff.lint]
select = ["I", "E", "F", "N", "B", "C4", "PT", "UP", "I001", "A", "RET", "TID251", "RUF", "SIM", "PYI", "T20", "PIE", "G", "ISC", "PL", "ANN"]
# E501 is disabled because line limit is controlled by black
# RUF005 is disabled because we use asyncio tasks without cancelling
# RUF015 is disabled because index access is preferred way for us
# PIE804 is disabled because we often use FHIR like camelCase variables
# SIM102 is disabled because nested if's are more readable
# SIM117 is disabled because nested with's are more readable
ignore = ["E501", "RUF006", "RUF015", "PIE804", "SIM102", "SIM117"]
unfixable = ["F401"]

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.mypy", "autohooks.plugins.ruff", "autohooks.plugins.black"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --color=yes --cov app --cov-report xml:coverage.xml --cov-report term --cov-report html --junitxml=report.xml"
testpaths = [
    "tests"
]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "WARNING"

[tool.mypy]
exclude = [
    ".history",
    "embed"
]
files = ["app", "tests"]
ignore_missing_imports = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = true

